[metadata]
name = FIRconv
version = 0.0.1
author = Davi Carvalho
author_email = r.davicarvalho@gmail.com
description = Python implementation of real-time convolution for auralization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davircarvalho/FIRconv
project_urls =
    Bug Tracker = https://github.com/davircarvalho/FIRconv/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
where = FIRconv